Resolve whitespace by hiding overflow hopefully

--- a/stylesheet_about.css
+++ b/stylesheet_about.css
@@ -71,7 +71,6 @@ li a:hover {
 	width: 100%;
 	height: 100%;
 	position: absolute;
-	overflow-x: hidden;
 }
 
 .contentcontainer {
